Add composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,16 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "illuminate/config": "5.4.*",
+        "illuminate/console": "5.4.*",
+        "illuminate/contracts": "5.4.*",
+        "illuminate/foundation": "5.4.*",
+        "illuminate/http": "5.4.*",
+        "illuminate/routing": "5.4.*",
+        "illuminate/session": "5.4.*",
+        "illuminate/support": "5.4.*",
+        "illuminate/view": "5.4.*"
     },
     "autoload": {
         "classmap": [],
