Update to Laravel 5.5

--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,37 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "illuminate/config": "5.4.*",
-        "illuminate/console": "5.4.*",
-        "illuminate/contracts": "5.4.*",
-        "illuminate/http": "5.4.*",
-        "illuminate/routing": "5.4.*",
-        "illuminate/session": "5.4.*",
-        "illuminate/support": "5.4.*",
-        "illuminate/view": "5.4.*"
+        "illuminate/config": "5.5.*",
+        "illuminate/console": "5.5.*",
+        "illuminate/contracts": "5.5.*",
+        "illuminate/http": "5.5.*",
+        "illuminate/routing": "5.5.*",
+        "illuminate/session": "5.5.*",
+        "illuminate/support": "5.5.*",
+        "illuminate/view": "5.5.*"
+    },
+    "require-dev": {
+        "codedungeon/phpunit-result-printer": "^0.4.4",
+        "fzaninotto/faker": "~1.4",
+        "laravel/laravel": "5.5.*",
+        "mockery/mockery": "0.9.*",
+        "phpmd/phpmd": "^2.6",
+        "phpunit/phpunit": "5.7.*",
+        "php-coveralls/php-coveralls" : "*",
+        "sebastian/phpcpd": "*"
     },
     "autoload": {
         "classmap": [],
         "psr-4": {
             "GeneaLabs\\LaravelImpersonator\\": "src/",
             "GeneaLabs\\LaravelImpersonator\\Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "GeneaLabs\\LaravelImpersonator\\Providers\\Service"
+            ]
         }
     },
     "minimum-stability": "stable"
