Update to be ready for 5.6.

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "laravel/laravel": ">=5.5",
         "mockery/mockery": "0.9.*",
         "phpmd/phpmd": "^2.6",
-        "phpunit/phpunit": ">=6.*",
+        "phpunit/phpunit": ">=6.0",
         "php-coveralls/php-coveralls" : "*",
         "sebastian/phpcpd": "*",
         "laravel/browser-kit-testing": "^2.0"
