--- a/composer.json
+++ b/composer.json
@@ -9,26 +9,29 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "illuminate/config": "5.5.*",
-        "illuminate/console": "5.5.*",
-        "illuminate/contracts": "5.5.*",
-        "illuminate/http": "5.5.*",
-        "illuminate/routing": "5.5.*",
-        "illuminate/session": "5.5.*",
-        "illuminate/support": "5.5.*",
-        "illuminate/view": "5.5.*"
+        "php": ">=7.1.3",
+        "illuminate/config": "5.5 - 5.7",
+        "illuminate/console": "5.5 - 5.7",
+        "illuminate/contracts": "5.5 - 5.7",
+        "illuminate/http": "5.5 - 5.7",
+        "illuminate/routing": "5.5 - 5.7",
+        "illuminate/session": "5.5 - 5.7",
+        "illuminate/support": "5.5 - 5.7",
+        "illuminate/view": "5.5 - 5.7"
     },
     "require-dev": {
-        "codedungeon/phpunit-result-printer": "^0.4.4",
-        "fzaninotto/faker": "~1.4",
-        "laravel/laravel": "5.5.*",
-        "mockery/mockery": "0.9.*",
-        "phpmd/phpmd": "^2.6",
-        "phpunit/phpunit": "6.*",
+        "beyondcode/laravel-dump-server": "^1.0",
+        "codedungeon/phpunit-result-printer": "*",
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "laravel/browser-kit-testing": "*",
+        "laravel/laravel": "5.7.*",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^2.0",
         "php-coveralls/php-coveralls" : "*",
-        "sebastian/phpcpd": "*",
-        "laravel/browser-kit-testing": "^2.0"
+        "phpmd/phpmd": "^2.6",
+        "phpunit/phpunit": "7.*",
+        "sebastian/phpcpd": "*"
     },
     "autoload": {
         "classmap": [],
