--- a/composer.json
+++ b/composer.json
@@ -10,27 +10,25 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/config": "5.5 - 5.7",
-        "illuminate/console": "5.5 - 5.7",
-        "illuminate/contracts": "5.5 - 5.7",
-        "illuminate/http": "5.5 - 5.7",
-        "illuminate/routing": "5.5 - 5.7",
-        "illuminate/session": "5.5 - 5.7",
-        "illuminate/support": "5.5 - 5.7",
-        "illuminate/view": "5.5 - 5.7"
+        "illuminate/config": "5.5 - 5.8",
+        "illuminate/console": "5.5 - 5.8",
+        "illuminate/contracts": "5.5 - 5.8",
+        "illuminate/http": "5.5 - 5.8",
+        "illuminate/routing": "5.5 - 5.8",
+        "illuminate/session": "5.5 - 5.8",
+        "illuminate/support": "5.5 - 5.8",
+        "illuminate/view": "5.5 - 5.8"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "codedungeon/phpunit-result-printer": "*",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
+        "filp/whoops": "*",
+        "fzaninotto/faker": "*",
         "laravel/browser-kit-testing": "*",
-        "laravel/laravel": "5.7.*",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
+        "laravel/laravel": "5.8.*",
+        "mockery/mockery": "*",
+        "nunomaduro/collision": "*",
         "php-coveralls/php-coveralls" : "*",
-        "phpmd/phpmd": "^2.6",
-        "phpunit/phpunit": "7.*",
+        "phpmd/phpmd": "*",
+        "phpunit/phpunit": "^7.5",
         "sebastian/phpcpd": "*"
     },
     "autoload": {
