--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
+.DS_Store
+.phpunit.result.cache
+/.idea
+/node_modules
 /vendor
 composer.lock
+composer.phar
+package-lock.json
+phpunit.xml
+Thumbs.db
