--- a/composer.json
+++ b/composer.json
@@ -10,25 +10,25 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/config": "5.5 - 5.8",
-        "illuminate/console": "5.5 - 5.8",
-        "illuminate/contracts": "5.5 - 5.8",
-        "illuminate/http": "5.5 - 5.8",
-        "illuminate/routing": "5.5 - 5.8",
-        "illuminate/session": "5.5 - 5.8",
-        "illuminate/support": "5.5 - 5.8",
-        "illuminate/view": "5.5 - 5.8"
+        "illuminate/config": "5.5 - 6.0",
+        "illuminate/console": "5.5 - 6.0",
+        "illuminate/contracts": "5.5 - 6.0",
+        "illuminate/http": "5.5 - 6.0",
+        "illuminate/routing": "5.5 - 6.0",
+        "illuminate/session": "5.5 - 6.0",
+        "illuminate/support": "5.5 - 6.0",
+        "illuminate/view": "5.5 - 6.0"
     },
     "require-dev": {
         "filp/whoops": "*",
         "fzaninotto/faker": "*",
         "laravel/browser-kit-testing": "*",
-        "laravel/laravel": "5.8.*",
+        "laravel/laravel": "dev-develop@dev",
         "mockery/mockery": "*",
         "nunomaduro/collision": "*",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "*",
         "sebastian/phpcpd": "*"
     },
     "autoload": {
@@ -46,5 +46,6 @@
             ]
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
