--- a/composer.json
+++ b/composer.json
@@ -16,21 +16,21 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/config": "5.5 - 6.0",
-        "illuminate/console": "5.5 - 6.0",
-        "illuminate/contracts": "5.5 - 6.0",
-        "illuminate/http": "5.5 - 6.0",
-        "illuminate/routing": "5.5 - 6.0",
-        "illuminate/session": "5.5 - 6.0",
-        "illuminate/support": "5.5 - 6.0",
-        "illuminate/view": "5.5 - 6.0"
+        "illuminate/config": "^5.5|^6.0",
+        "illuminate/console": "^5.5|^6.0",
+        "illuminate/contracts": "^5.5|^6.0",
+        "illuminate/http": "^5.5|^6.0",
+        "illuminate/routing": "^5.5|^6.0",
+        "illuminate/session": "^5.5|^6.0",
+        "illuminate/support": "^5.5|^6.0",
+        "illuminate/view": "^5.5|^6.0"
     },
     "require-dev": {
         "filp/whoops": "*",
         "fzaninotto/faker": "*",
         "laravel/browser-kit-testing": "*",
-        "laravel/laravel": "dev-develop@dev",
-        "laravel/nova": "*",
+        "laravel/laravel": "^6.0",
+        "laravel/nova": "^2.0",
         "mockery/mockery": "*",
         "nunomaduro/collision": "*",
         "php-coveralls/php-coveralls" : "*",
