--- a/composer.json
+++ b/composer.json
@@ -15,28 +15,22 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
-        "illuminate/config": "^5.5|^6.0",
-        "illuminate/console": "^5.5|^6.0",
-        "illuminate/contracts": "^5.5|^6.0",
-        "illuminate/http": "^5.5|^6.0",
-        "illuminate/routing": "^5.5|^6.0",
-        "illuminate/session": "^5.5|^6.0",
-        "illuminate/support": "^5.5|^6.0",
-        "illuminate/view": "^5.5|^6.0"
+        "illuminate/config": "^7.0",
+        "illuminate/console": "^7.0",
+        "illuminate/contracts": "^7.0",
+        "illuminate/http": "^7.0",
+        "illuminate/routing": "^7.0",
+        "illuminate/session": "^7.0",
+        "illuminate/support": "^7.0",
+        "illuminate/view": "^7.0"
     },
     "require-dev": {
-        "filp/whoops": "*",
-        "fzaninotto/faker": "*",
-        "laravel/browser-kit-testing": "*",
-        "laravel/laravel": "^6.0",
-        "laravel/nova": "^2.0",
-        "mockery/mockery": "*",
-        "nunomaduro/collision": "*",
+        "laravel/browser-kit-testing": "dev-master@dev",
+        "laravel/laravel": "dev-develop@dev",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
-        "phpunit/phpunit": "*",
-        "sebastian/phpcpd": "*"
+        "phpunit/phpunit": "^8.5",
+        "sebastian/phpcpd": "^5.0"
     },
     "autoload": {
         "classmap": [],
