--- a/composer.json
+++ b/composer.json
@@ -15,18 +15,18 @@
         }
     ],
     "require": {
-        "illuminate/config": "^6.0|^7.0",
-        "illuminate/console": "^6.0|^7.0",
-        "illuminate/contracts": "^6.0|^7.0",
-        "illuminate/http": "^6.0|^7.0",
-        "illuminate/routing": "^6.0|^7.0",
-        "illuminate/session": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
-        "illuminate/view": "^6.0|^7.0"
+        "illuminate/config": "^7.0",
+        "illuminate/console": "^7.0",
+        "illuminate/contracts": "^7.0",
+        "illuminate/http": "^7.0",
+        "illuminate/routing": "^7.0",
+        "illuminate/session": "^7.0",
+        "illuminate/support": "^7.0",
+        "illuminate/view": "^7.0"
     },
     "require-dev": {
-        "laravel/browser-kit-testing": "dev-master@dev",
-        "laravel/laravel": "dev-develop@dev",
+        "laravel/browser-kit-testing": "^6.0",
+        "laravel/laravel": "^7.0",
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^8.5",
