--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^9.0",
-        "sebastian/phpcpd": "^5.0"
+        "sebastian/phpcpd": "^5.0",
+        "laravel/ui": "^3.0",
+        "laravel/legacy-factories": "^1.0.4",
+        "fzaninotto/faker": "^1.9.1"
     },
     "autoload": {
         "classmap": [],
