--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "genealabs/laravel-impersonator",
-    "description": "Impersonate users in your Laravel 5.4+ app.",
+    "description": "Impersonate users in your Laravel and Nova apps.",
     "license": "MIT",
     "authors": [
         {
@@ -25,15 +25,18 @@
         "illuminate/view": "^8.0"
     },
     "require-dev": {
+        "facade/ignition": "^2.3.6",
+        "fzaninotto/faker": "^1.9.1",
         "laravel/browser-kit-testing": "^6.0",
         "laravel/laravel": "^8.0",
+        "laravel/legacy-factories": "^1.0.4",
+        "laravel/ui": "^3.0",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^5.0",
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^9.0",
-        "sebastian/phpcpd": "^5.0",
-        "laravel/ui": "^3.0",
-        "laravel/legacy-factories": "^1.0.4",
-        "fzaninotto/faker": "^1.9.1"
+        "sebastian/phpcpd": "^5.0"
     },
     "autoload": {
         "classmap": [],
