Add nova dependencies.

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^9.0",
-        "sebastian/phpcpd": "^5.0"
+        "sebastian/phpcpd": "^5.0",
+        "laravel/nova": "^3.12"
     },
     "autoload": {
         "classmap": [],
