--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -39,13 +39,6 @@ jobs:
         redis version: '5'
         number of databases: 100
 
-    - uses: harmon758/postgresql-action@v1
-      with:
-        postgresql version: '11'
-        postgresql db: 'testing'
-        postgresql user: 'homestead'
-        postgresql password: 'secret'
-
     - name: Remove Nova on a pull request
       if: github.event_name == 'pull_request'
       run: composer remove laravel/nova --no-update --no-interaction --dev
@@ -62,13 +55,13 @@ jobs:
       if: github.event_name == 'pull_request'
       run: |
         mkdir -p ./build/logs
-        vendor/bin/phpunit --configuration phpunit.xml.dist --testsuite Integration,Feature --coverage-text --coverage-clover ./build/logs/clover.xml
+        vendor/bin/phpunit --configuration phpunit.xml --testsuite Integration,Feature --coverage-text --coverage-clover ./build/logs/clover.xml
 
     - name: Execute Nova tests via PHPUnit
       if: github.event_name != 'pull_request'
       run: |
         mkdir -p ./build/logs
-        vendor/bin/phpunit --configuration phpunit.xml.dist --testsuite Nova,Integration,Feature --coverage-text --coverage-clover ./build/logs/clover.xml
+        vendor/bin/phpunit --configuration phpunit.xml --testsuite Nova,Integration,Feature --coverage-text --coverage-clover ./build/logs/clover.xml
 
     - name: Submit Coveralls Report
       run: php vendor/bin/php-coveralls -v
