--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -13,9 +13,9 @@ jobs:
 
     strategy:
       max-parallel: 6
-      fail-fast: true
+      fail-fast: false
       matrix:
-        php: [7.3, 7.4]
+        php: [7.3,7.4,8.0]
 
     name: PHP ${{ matrix.php }}
 
