--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -15,7 +15,7 @@ jobs:
       max-parallel: 6
       fail-fast: false
       matrix:
-        php: [7.3,7.4,8.0]
+        php: [7.3,7.4]
 
     name: PHP ${{ matrix.php }}
 
@@ -55,14 +55,14 @@ jobs:
     - name: Run Tests without Nova
       if: github.event_name == 'pull_request'
       run: |
-        mkdir -p ./build/logs
-        vendor/bin/phpunit --configuration phpunit.xml --testsuite Integration,Feature --coverage-text --coverage-clover ./build/logs/clover.xml
+        mkdir -p ./coverage
+        vendor/bin/phpunit --configuration phpunit.xml --testsuite Integration,Feature --coverage-text --coverage-clover ./coverage/lcov.info
 
     - name: Run Tests with Nova
       if: github.event_name != 'pull_request'
       run: |
-        mkdir -p ./build/logs
-        vendor/bin/phpunit --configuration phpunit.xml --testsuite Nova,Integration,Feature --coverage-text --coverage-clover ./build/logs/clover.xml
+        mkdir -p ./coverage
+        vendor/bin/phpunit --configuration phpunit.xml --testsuite Nova,Integration,Feature --coverage-text --coverage-clover ./coverage/lcov.info
 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v1.1.2
