--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - uses: reviewdog/action-setup@v1
+      with:
+        reviewdog_version: latest
+
     - name: Cache dependencies
       uses: actions/cache@v1
       with:
@@ -51,6 +55,11 @@ jobs:
       run: |
         composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
         composer install --dev --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+
+      - name: Check Code
+        uses: lifulltechvn/laravel-app-reviewdog-action@v1
+        with:
+          github_token: ${{ secrets.github_token }}
 
     - name: Run Tests without Nova
       if: github.event_name == 'pull_request'
