--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,9 @@
         "laravel/laravel": "^8.0",
         "laravel/legacy-factories": "^1.0.4",
         "laravel/ui": "^3.0",
-        "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "php-coveralls/php-coveralls" : "^2.2",
-        "phpmd/phpmd": "^2.8",
-        "phpunit/phpunit": "^9.0",
-        "sebastian/phpcpd": "^5.0",
-        "laravel/nova": "^3.12"
+        "laravel/nova": "^3.12",
+        "orchestra/testbench": "^6.2"
     },
     "autoload": {
         "classmap": [],
