--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -7,18 +7,14 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  laravel-tests:
-
+  tests:
     runs-on: ubuntu-latest
-
     strategy:
       max-parallel: 6
       fail-fast: false
       matrix:
         php: [7.3,7.4]
-
     name: PHP ${{ matrix.php }}
-
     steps:
     - uses: actions/checkout@v2
 
@@ -56,10 +52,10 @@ jobs:
         composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
         composer install --dev --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
-      - name: Check Code
-        uses: lifulltechvn/laravel-app-reviewdog-action@v1
-        with:
-          github_token: ${{ secrets.github_token }}
+    - name: Check Code
+      uses: lifulltechvn/laravel-app-reviewdog-action@v1
+      with:
+        github_token: ${{ secrets.github_token }}
 
     - name: Run Tests without Nova
       if: github.event_name == 'pull_request'
