--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -47,15 +47,16 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-    - name: Install Dependencies
-      run: |
-        composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
-        composer install --dev --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-
     - name: Check Code
       uses: lifulltechvn/laravel-app-reviewdog-action@v1
       with:
         github_token: ${{ secrets.github_token }}
+        phpcs_args: --standard=PSR1,PSR2,PSR12
+
+    - name: Install Dependencies
+      run: |
+        composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
+        composer install --dev --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
     - name: Run Tests without Nova
       if: github.event_name == 'pull_request'
