--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -7,6 +7,29 @@ on:
     branches: [ master, develop ]
 
 jobs:
+  misspell-lint:
+    name: runner / misspell
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code.
+        uses: actions/checkout@v1
+      - name: misspell
+        uses: reviewdog/action-misspell@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          locale: "US"
+
+  php-check-code:
+    name: runner / php-check-code
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the workspace
+        uses: actions/checkout@v2
+      - name: Check Code
+        uses: lifulltechvn/laravel-app-reviewdog-action@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+
   tests:
     runs-on: ubuntu-latest
     strategy:
@@ -17,10 +40,6 @@ jobs:
     name: PHP ${{ matrix.php }}
     steps:
     - uses: actions/checkout@v2
-
-    - uses: reviewdog/action-setup@v1
-      with:
-        reviewdog_version: latest
 
     - name: Cache dependencies
       uses: actions/cache@v1
@@ -46,12 +65,6 @@ jobs:
 
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
-    - name: Check Code
-      uses: lifulltechvn/laravel-app-reviewdog-action@v1
-      with:
-        github_token: ${{ secrets.github_token }}
-        phpcs_args: --standard=PSR1,PSR2,PSR12
 
     - name: Install Dependencies
       run: |
