--- a/.github/workflows/laravel-package.yml
+++ b/.github/workflows/laravel-package.yml
@@ -38,7 +38,16 @@ jobs:
       - name: Check out code into the workspace
         uses: actions/checkout@v2
       - name: Run php check code with reviewdog
-        uses: GeneaLabs/action-reviewdog-phpmd@0.1.6
+        uses: GeneaLabs/action-reviewdog-phpmd@1.0.1
+
+  phpstan-linter:
+    name: PHPStan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the workspace
+        uses: actions/checkout@v2
+      - name: Run php check code with reviewdog
+        uses: GeneaLabs/action-reviewdog-phpstan
 
   tests:
     runs-on: ubuntu-latest
