--- a/composer.json
+++ b/composer.json
@@ -15,28 +15,25 @@
         }
     ],
     "require": {
-        "illuminate/config": "^8.0",
-        "illuminate/console": "^8.0",
-        "illuminate/contracts": "^8.0",
-        "illuminate/http": "^8.0",
-        "illuminate/routing": "^8.0",
-        "illuminate/session": "^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/view": "^8.0"
+        "illuminate/config": "^9.0",
+        "illuminate/console": "^9.0",
+        "illuminate/contracts": "^9.0",
+        "illuminate/http": "^9.0",
+        "illuminate/routing": "^9.0",
+        "illuminate/session": "^9.0",
+        "illuminate/support": "^9.0",
+        "illuminate/view": "^9.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.9",
         "laravel/browser-kit-testing": "^6.0",
-        "laravel/laravel": "^8.0",
+        "laravel/laravel": "^9.0",
         "laravel/legacy-factories": "^1.0.4",
         "laravel/ui": "^3.0",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.8",
-        "phpunit/phpunit": "^9.0",
-        "sebastian/phpcpd": "^5.0",
+        "phpunit/phpunit": "^9.5",
         "laravel/nova": "^3.12"
     },
     "autoload": {
