--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,13 @@
         "illuminate/view": "^9.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9",
+        "fakerphp/faker": "^1.9.1",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",       
         "laravel/browser-kit-testing": "^6.0",
-        "laravel/laravel": "^9.0",
-        "laravel/ui": "^3.0",
-        "mockery/mockery": "^1.3.1",
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.8",
-        "phpunit/phpunit": "^9.5",
         "laravel/nova": "^3.12"
     },
     "autoload": {
